<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="#681a5d"
    android:layout_height="match_parent">
    <!--android:paddingTop="?attr/actionBarSize"-->

    <include layout="@layout/appbar"/>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="60dp"
    android:background="@drawable/fondo_personalizado"
    android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/LinearMain"
                android:padding="20dp">


                <!--CalendarView
                    android:layout_width="match_parent"
                    android:id="@+id/calendario"
                    android:layout_height="wrap_content" /-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/txtDatosPaciente"
                    android:src="@drawable/user"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/fondo_datos"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/txtDatosPaciente"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:id="@+id/txtNombre"
                            android:text="@string/txtNombre"/>
                        <TextView
                            android:id="@+id/welcomeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtCitas"
                            android:textSize="20sp"
                            android:text="@string/txtFecha" />

                        <TextView
                            android:id="@+id/cita"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:id="@+id/linearHora"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:id="@+id/txtHoras"
                            android:text="@string/txtHora"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:id="@+id/horas"
                            android:text="@string/txtHoras"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnCancelarCita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btnpersonalizado"
                    android:onClick="CancelarCita"
                    android:text="@string/C_cita"
                    android:textColor="@drawable/txt_btn" />

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btnpersonalizado"
                    android:text="@string/logout"
                    android:textColor="@drawable/txt_btn" />

            </LinearLayout>



            <!--***********************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/FechaHora"
                android:padding="20dp">

                <CalendarView
                    android:layout_width="match_parent"
                    android:id="@+id/calendario"
                    android:theme="@style/DialogTheme"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="mostrarFecha"
                        android:background="@drawable/btnpersonalizado"
                        android:textColor="@drawable/txt_btn"
                        android:id="@+id/btnFecha"
                        android:text="@string/txtBFecha"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="date"
                        android:id="@+id/txtBFecha"
                        android:hint="@string/txtFechas"
                        android:textColor="#000"
                        android:gravity="center"
                        android:clickable="false"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/btnHora"
                        android:onClick="mostrarHora"
                        android:background="@drawable/btnpersonalizado"
                        android:textColor="@drawable/txt_btn"
                        android:text="@string/txtBHoras"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="date"
                        android:id="@+id/txtBHora"
                        android:textColor="#000"
                        android:hint="@string/txtHoras"
                        android:gravity="center"
                        android:clickable="false"
                        android:enabled="false"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etMotivo"
                        android:inputType="text"
                        android:hint="@string/etMotivo"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:id="@+id/etDescripcion"
                        android:inputType="text"
                        android:hint="@string/etDescripcion"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btnAddCita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/btnpersonalizado"
                    android:text="@string/agregarCita"
                    android:onClick="agregarCita"
                    android:textColor="@drawable/txt_btn" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <!--***********************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            ***************************************************************************************
            -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container"></FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/colorSecondaryDark"
        app:itemTextColor="@color/colorPrimary"
        app:itemIconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />
    <!--agregué el itemIconTin, el itemTextColor y modifiqué el background-->

</androidx.constraintlayout.widget.ConstraintLayout>
